 - [DS-359] Add alternate file appender for log4j

(Mark Wood)
 - [DS-52] Factor out common webapp installation - ID: 2042160
 - [DS-455] Remove dspace/config/log4j.xml

(Ekaterina Pechekhonova)
 - [DS-330] Create new session on login / invalidate sessions on logout

(Richard Rodgers)
 - [DS-324] Add OpenSearch support

(Toni Prieto)
 - [DS-356] Antispam for suggest item feature

(Flavio Botelho)
 - [DS-246] Fix configurable browse parameter encoding (XMLUI)
 - [DS-320] java.util.NoSuchElementException: Timeout waiting for idle object
 - [DS-353] Missing commits in XMLUI server-side javascript code.

(Hardik Mishra)
 - [DS-370] E Mail Sent On Item Export Error Message

(Keller)
 - [DS-375] Dspace 1.5.2 Russian translation

(Steven Williams / Ladd Hanson / Stuart Lewis)
 - [DS-295] CC License being assigned incorrect Mime Type during submission.

(Stuart Lewis / Graham Triggs)
 - [DS-460] Change logging from RollingFileAppender to DailyFileAppender

1.5.2 final
===========

(Graham Triggs)
 - Fixes for critical bugs identified by Findbugs

(Mark Diggory)
 - [DS-100] XMLUI OpenURL support contributed by the National Evolutionary Synthesis Center (NESCent) and @mire.
 - [DS-93]  Upgrade XMLUI to Cocoon 2.2
 - [DS-117] File uploads >=100KB lead to an error in the xmlui
 - [DS-154] Make a backup of the config dir on Ant update
 - [DS-155] Maven war plugin changes cause war to include libraries as well
 - [DS-183] XPDF support for filtering PDFs for text extraction/search authored by Larry Stone
 - [DS-185] bin files in DOS format
 
(Mark Wood)
 - [DS-2] [2002866] Return 404, not 200, when page Not Found
 - [DS-150] [2025998] Usage event (statistics) plugin hook
 - [DS-143] [2620307] 'ant init_configs' copies wrong dspace.cfg
 - [DS-41] Small JSP cleanups

(Mark Wood / Andrea Bollini)
- [DS-43] Manakin RSS feed generator cache timeout can't be adjusted - ID: 2593393

(Stuart Lewis)
 - [DS-4] [2057231] Refactor LDAPServlet to use Stackable Authentication